rns-lang/tests/snapshots/parser-outside_class_directive-dot_method_outside.snap
---
source: jasm/tests/integration_test.rs
expression: "&combined"
---
----- INPUT  -----

.method public static main([Ljava/lang/String;)V
.class public HelloWorld

----- STDOUT -----

----- STDERR -----
Error: unexpected directive
   ╭─[ test_data/integration/parser/outside_class_directive/dot_method_outside.ja:2:1 ]
   │
 2 │ .method public static main([Ljava/lang/String;)V
   │ ───┬───  
   │    ╰───── The '.method' directive cannot appear before a class is defined.
   │ 
   │ Note: A Java assembly file must start with a '.class' definition.
───╯
