rns-lang/tests/snapshots/parser-outside_class_directive-dot_super_outside.snap
---
source: jasm/tests/integration_test.rs
expression: "&combined"
---
----- INPUT  -----
; comment before the directive
.super java/lang/Object
.class public HelloWorld

----- STDOUT -----

----- STDERR -----
Error: unexpected directive
   ╭─[ test_data/integration/parser/outside_class_directive/dot_super_outside.ja:2:1 ]
   │
 2 │ .super java/lang/Object
   │ ───┬──  
   │    ╰──── The '.super' directive cannot appear before a class is defined.
   │ 
   │ Note: A Java assembly file must start with a '.class' definition.
───╯
