rns-lang/tests/snapshots/parser-outside_class_directive-open_bracket_outside.snap
---
source: jasm/tests/integration_test.rs
expression: "&combined"
---
----- INPUT  -----

; comment then bracket
  [
.class public HelloWorld

----- STDOUT -----

----- STDERR -----
Error: unexpected symbol
   ╭─[ test_data/integration/parser/outside_class_directive/open_bracket_outside.ja:3:3 ]
   │
 3 │   [
   │   ┬  
   │   ╰── The '[' symbol cannot appear before a class is defined.
   │ 
   │ Note: A Java assembly file must start with a '.class' definition.
───╯
