rns-lang/tests/snapshots/parser-outside_class_directive-open_paren_outside.snap
---
source: jasm/tests/integration_test.rs
expression: "&combined"
---
----- INPUT  -----
; leading comment with spaces   
(
.class public HelloWorld

----- STDOUT -----

----- STDERR -----
Error: unexpected symbol
   ╭─[ test_data/integration/parser/outside_class_directive/open_paren_outside.ja:2:1 ]
   │
 2 │ (
   │ ┬  
   │ ╰── The '(' symbol cannot appear before a class is defined.
   │ 
   │ Note: A Java assembly file must start with a '.class' definition.
───╯
