rns-lang/tests/snapshots/parser-outside_class_directive-public_keyword.snap
---
source: jasm/tests/integration_test.rs
expression: "&combined"
---
----- INPUT  -----
   public
.class public HelloWorld

----- STDOUT -----

----- STDERR -----
Error: unexpected keyword before class definition
   ╭─[ test_data/integration/parser/outside_class_directive/public_keyword.ja:1:4 ]
   │
 1 │    public
   │    ───┬──  
   │       ╰──── this keyword must appear inside a class definition
   │ 
   │ Note: Access flags like 'public' and 'static' must appear within a '.class' or '.method' directive.
───╯
